# google-drive-python

./: .gitignore  .travis.yml  CHANGELOG  CHANGELOG.md  CONTRIBUTING  CONTRIBUTING.md  Makefile  README  README.md  STYLE.md  TODO.md  google-apis-usage.md  google_auth.py  init-virtual-env.sh  pyproject.toml  setup.cfg  setup.py
.github/workflows/: python-package.yml  python-tests.yml
docs/source/: conf.py  index.rst
googledrive/: __main__.py  api.py  cli.py  exceptions.py  google_drive.py  mappers.py  models.py
requirements/: dev.txt  prod.txt
scripts/: release.sh
scripts/dev/: activate-venv.sh
scripts/google/: authenticate.py
scripts/release/: utils.sh
tests/: test_api.py  test_mappers.py
tests/common/: mocks.py
